--- a/HTML-CSS/todo-app-main/index.html
+++ b/HTML-CSS/todo-app-main/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/global.css">
   
   <title>Frontend Mentor | Todo app</title>
 
@@ -21,7 +28,7 @@
   <!-- Add dynamic number --> items left
 
   All
-  Active 
+  Active
   Completed
 
   Clear Completed
@@ -30,7 +37,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Caio Alves</a>.
   </div>
 </body>
 </html>
