--- a/HTML-CSS/clipboard-landing-page-master/index.html
+++ b/HTML-CSS/clipboard-landing-page-master/index.html
@@ -152,25 +152,25 @@
   </main>
 
   <footer>
-    <img class="logo-footer" src="./images/logo.svg" alt="Logo" >
-    <ul class="ul-footer">
-      <li>FAQs</li>
-      <li>Contact Us</li>
-      <li>Privacy Policy</li>
-      <li>Press Kit</li>
-      <li>Install Guide</li>
-    </ul>
-
-    <div class="logo-footer-container">
-      <img src="./images/icon-facebook.svg" alt="Logo Facebook">
-      <img src="./images/icon-twitter.svg" alt="Logo Twitter">
-      <img src="./images/icon-instagram.svg" alt="Logo Instagram">
-    </div>
+    <div class="footer-container">
+      <div class="footer-logo-container">
+        <img class="logo-footer" src="./images/logo.svg" alt="Logo" >
+        <ul class="ul-footer">
+          <li>FAQs</li>
+          <li>Contact Us</li>
+          <li>Privacy Policy</li>
+          <li>Press Kit</li>
+          <li>Install Guide</li>
+        </ul>
+      </div>
   
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Caio Alves</a>.
-    </p>
+      <div class="logo-footer-container">
+        <img src="./images/icon-facebook.svg" alt="Logo Facebook">
+        <img src="./images/icon-twitter.svg" alt="Logo Twitter">
+        <img src="./images/icon-instagram.svg" alt="Logo Instagram">
+      </div>
+    </div>
+
   </footer>
-</body>
+  </body>
 </html>
