feat: add delete and check item

--- a/HTML-CSS/todo-app-main/index.html
+++ b/HTML-CSS/todo-app-main/index.html
@@ -63,9 +63,9 @@
         <p><span class="left-itens">0</span> items left</p> 
 
         <ul class="ul-footer">
-          <li>All</li>
-          <li>Active</li>
-          <li>Completed</li>
+          <li id="all">All</li>
+          <li id="active">Active</li>
+          <li id="completed">Completed</li>
         </ul>
         
         <button class="btn-clear" onclick="clearList()">Clear Completed</button>
